--- a/FinancialAdvisorAppUI/Pages/FinanceTracking/Index.razor
+++ b/FinancialAdvisorAppUI/Pages/FinanceTracking/Index.razor
@@ -49,7 +49,7 @@ else
     {
 
         var auth = await _authentication.GetAuthenticationStateAsync();
-        string userId = auth.User.FindFirst(AppConstants.UserId).Value;
+        int userId = Int32.Parse(auth.User.FindFirst(AppConstants.UserId).Value);
         financeDate = DateTime.Now;
         Console.WriteLine($"user id: {userId}");
 
