--- a/FinancialAdvisorAppUI/Pages/Goals/Create.razor
+++ b/FinancialAdvisorAppUI/Pages/Goals/Create.razor
@@ -30,7 +30,7 @@ else
                 Data="@goals" TItem="Goal">
         <Columns>
 
-            <RadzenGridColumn Width="200px" TItem="Goal" Property="FinanceDesc" Title="Goal Type">
+            <RadzenGridColumn Width="100px" TItem="Goal" Property="FinanceDesc" Title="Goal Type">
                 <EditTemplate Context="goal">
                     <RadzenDropDown @bind-Value="goal.FinanceDesc" Data="@financeTypes" TextProperty="FinanceDesc" ValueProperty="FinanceDesc" Style="width:100%" />
                 </EditTemplate>
@@ -38,17 +38,21 @@ else
 
             <RadzenGridColumn Width="200px" TItem="Goal" Property="Justification" Title="Justification">
                 <EditTemplate Context="goal">
-                    <RadzenTextArea @bind-Value="goal.Justification" Style="white-space: pre-wrap" Name="Justification" />
+                    <RadzenTextArea @bind-Value="goal.Justification" Style="width:100%; display: block" Name="Justification" Rows="10">
+                        <template>
+                            <p style="white-space:pre-wrap">@goal.Justification</p>
+                        </template>
+                    </RadzenTextArea>
                 </EditTemplate>
             </RadzenGridColumn>
 
-            <RadzenGridColumn Width="200px" TItem="Goal" Property="GoalValue" Title="Goal Value">
+            <RadzenGridColumn Width="100px" TItem="Goal" Property="GoalValue" Title="Goal Value">
                 <EditTemplate Context="goal">
                     <RadzenNumeric @bind-Value="goal.GoalValue" Data="@goals" TextProperty="GoalValue" ValueProperty="GoalValue" Style="width:100%" />
                 </EditTemplate>
             </RadzenGridColumn>
 
-            <RadzenGridColumn TItem="Goal" Property="GoalStartDate" Title="Start Date">
+            <RadzenGridColumn Width="100px" TItem="Goal" Property="GoalStartDate" Title="Start Date">
                 <Template Context="goal">
                     @String.Format("{0:d}", goal.GoalStartDate)
                 </Template>
@@ -57,7 +61,7 @@ else
                 </EditTemplate>
             </RadzenGridColumn>
 
-            <RadzenGridColumn TItem="Goal" Property="DueDate" Title="Due Date">
+            <RadzenGridColumn Width="100px" TItem="Goal" Property="DueDate" Title="Due Date">
                 <Template Context="goal">
                     @String.Format("{0:d}", goal.DueDate)
                 </Template>
