--- a/FinancialAdvisorAppUI/Shared/NavMenu.razor
+++ b/FinancialAdvisorAppUI/Shared/NavMenu.razor
@@ -20,16 +20,10 @@
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="@AppConstants.LinkGoals">
-                        <span class="oi oi-person" aria-hidden="true"></span> Goals
+                    <NavLink class="nav-link" href="@AppConstants.LinkDashboard">
+                        <span class="oi oi-person" aria-hidden="true"></span> Dashboard
                     </NavLink>
                 </li>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="@AppConstants.LinkFinanceTracking">
-                        <span class="oi oi-arrow-right" aria-hidden="true"></span> Finance Tracking
-                    </NavLink>
-                </li>
-
 
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="@AppConstants.LinkLogout">
