--- a/FinancialAdvisorAppUI/_Imports.razor
+++ b/FinancialAdvisorAppUI/_Imports.razor
@@ -24,3 +24,4 @@
 @using FinancialAdvisorAppUI.Static
 @using FinancialAdvisorAppUI.Providers
 @using FinancialAdvisorAppUI.UICommonFunctions
+@using FinancialAdvisorAppUI.FinanceCalculations
