--- a/FinancialAdvisorAppUI/Shared/NavMenu.razor
+++ b/FinancialAdvisorAppUI/Shared/NavMenu.razor
@@ -20,8 +20,13 @@
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="@AppConstants.LinkFinanceTracking">
+                        <span class="oi oi-book" aria-hidden="true"></span> Finances Entry
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
                     <NavLink class="nav-link" href="@AppConstants.LinkDashboard">
-                        <span class="oi oi-person" aria-hidden="true"></span> Dashboard
+                        <span class="oi oi-dashboard" aria-hidden="true"></span> Dashboard
                     </NavLink>
                 </li>
 
